# raytracer-old

./: .gitignore  Cargo.toml  README.md
scenes/RTIOW/: 18-ADistantView.json  19-ZoomingIn.json  20-SpheresWithDOF.json
src/: camera.rs  config.rs  hittable.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  tracer.rs  vec.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/object/: mod.rs  moving_sphere.rs  sphere.rs
src/png/: chunk.rs  chunk_type.rs  mod.rs  utils.rs
src/primitive/: ray.rs  vec3.rs
src/scenes/: mod.rs  rtiow_final.rs
src/types/: sphere.rs  vec3.rs
