[package]
name = "raytracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = { version = "3.1.18" }
enum_dispatch = "0.3.8"
flate2 = "1.0.23"
once_cell = "1.10.0"
rand = { version = "0.8.4", features = ["small_rng"] }
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
debug = true
